# raytracer-challenge

ch1/: Cargo.toml  ex1.lua  ex2.lua  functions.lua  jamis.lua  test.txt
ch1/benches/: render.rs
ch1/src/: camera.rs  canvas.rs  color.rs  lib.rs  lua.rs  main.rs  material.rs  script.rs  shape.rs  transform.rs  vec.rs
