[package]
name = "ch1"
version = "0.1.0"
authors = ["Joseph Dane <joe.dane@gmail.com>"]
edition = "2018"

[dependencies]

ndarray = "0.13.1"
ndarray-linalg = { version = "0.12.0", features = ["intel-mkl"] }
image = "0.23.0"
itertools = "0.9.0"
rayon = "1.3.0"
#serde = { version = "1.0.104", features = ["derive"] }
#rhai = "0.10.1"
rand = "0.3"
rlua = "0.17.0"

[dev-dependencies]
criterion = "0.3"
criterion-macro = "0.3"

[[bin]]
name = "jamis"
test = false

[[bench]]
name = "render"
harness = false
