[package]
name = "ch1"
version = "0.1.0"
authors = ["Joseph Dane <joe.dane@gmail.com>"]
edition = "2018"

[dependencies]

array2d = "0.2.1"
log = "0.4.11"
simplelog = "0.8.0"
num = "0.3.0"
image = "0.23.0"
itertools = "0.9.0"
rayon = "1.3.0"
#serde = { version = "1.0.104", features = ["derive"] }
#rhai = "0.10.1"
rand = "0.3"
rlua = "0.17.0"

[dev-dependencies]
criterion = "0.3"
criterion-macro = "0.3"

[profile.release]
debug = true

[[bin]]
name = "jamis"
test = false

[[bench]]
name = "render"
harness = false
